update status and chapter

--- a/bio-list.tex
+++ b/bio-list.tex
@@ -6029,24 +6029,21 @@ Max Line length: 91
 \section{Hue}
 
 
-Hue or Hadoop User Interface is an open source tool licensed under
-Apache v2 license. It sits on top of the data at the visualization
-layer and provides a graphical user interface to operate and develop
-applications for performing self-service data analytics.  The latest
-version of Hue available is v4.1.0, released October 4th 2017 and can
-be downloaded from the website ~\cite{hid-sp18-517-hue-apache}. Hue is
-an open source Analytics Workbench for browsing, querying and
-visualizing data. Hue works well for a variety of technologies in the
-Hadoop ecosystem such as Hive, Impala, Pig, MapReduce, Spark. Query
-tool works with SparkSQL, Solr SQL and Phoenix. Further it works well
-with RDBMS such as Oracle and MySQL~\cite{hid-sp18-517-Hue-wiki}. Some
-of the applications of Hue are analytics dashboards, job scheduling,
-workflows, it also serves as an interface for jobs, HDFS, S3 files,
-SQL Tables, Indexes, Git files, Sentry permissions, Sqoop and
-more~\cite{hid-sp18-517-Hue-wiki}.Hue is available in all major Hadoop
-distributions such as Cloudera, Hortonworks, MapR and
-AWS~\cite{hid-sp18-517-Hue-wiki}.
-
+Hue or Hadoop User Interface is an open source tool licensed under Apache v2
+license. It sits on top of the data at the visualization layer and provides a
+graphical user interface to operate and develop applications for performing
+self-service data analytics.  The latest version of Hue available is v4.1.0,
+released October 4th 2017 and can be downloaded from the website
+~\cite{hid-sp18-517-hue-apache}. Hue is an open source Analytics Workbench for
+browsing, querying and visualizing data. Hue works well for a variety of
+technologies in the Hadoop ecosystem such as Hive, Impala, Pig, MapReduce,
+Spark. Query tool works with SparkSQL, Solr SQL and Phoenix. Further it works
+well with RDBMS such as Oracle and MySQL~\cite{hid-sp18-517-Hue-wiki}. Some of
+the applications of Hue are analytics dashboards, job scheduling, workflows, it
+also serves as an interface for jobs, HDFS, S3 files, SQL Tables, Indexes, Git
+files, Sentry permissions, Sqoop and more~\cite{hid-sp18-517-Hue-wiki}.Hue is
+available in all major Hadoop distributions such as Cloudera, Hortonworks, MapR
+and AWS~\cite{hid-sp18-517-Hue-wiki}.
 
 
 \begin{IU}
@@ -6058,21 +6055,13 @@ ERROR: index is missing
 \href{https://github.com/cloudmesh-community/hid-sp18-517/blob/master//technology/abstract-hue.tex}{abstract-hue.tex}
 
  
-chktex:
-\begin{tiny}
-\begin{verbatim}
-Warning 39 in ../hid-sp18-517/technology/abstract-hue.tex line 9: Double space
-found. be downloaded from the website ~\cite{hid-sp18-517-hue-apache}. Hue is
-^
-\end{verbatim}
-\end{tiny}
 
-Wordcount: 146
+Wordcount: 148
 
 
 Quote ratio: 0.00 \%
  
-Max Line length: 70
+Max Line length: 79
 \end{IU}
 
 \section{Kafka}
@@ -6190,26 +6179,24 @@ Max Line length: 73
 
 \section{Metron}
 
-Apache Metron is yet another open source project that serves as a big
-data solution for CyberSecurity applications. It provides a framework
-to ingest, process and also store data such as application logs,
-network logs and so on so that can be analyzed by Information security
-teams so that they can detect anomalies and respond to cyber
-threats. It provides the storage solution in the form of security data
-lake or vault where the logs can be stored long term on cost effective
-storage. In addition to SIEM or Security information and event
-management features Metron also provides packet replay utilities which
-can be of immense help for the security analysts.  Metron also support
-applying machine learning algorithms on real time data that is being
-ingested through continuous streams~\cite{hid-sp18-517-metron-apache}.
-Apache Metron caters to personnels at all levels in the CyberSecurity
-operations from CISO to SOC analyst to security Data
-Scientist~\cite{hid-sp18-517-metron-hortonworks}.  It provides a
-single view of the risk to CISO or Chief Information Security Officer
-while automatically performs that analytics so security investigator
-does not have to spend time on finding co-relation in the data. Metron
-also has the capability to create incidents and can integrate with the
-ITSM or Information technology service management systems to provide
+Apache Metron is yet another open source project that serves as a big data
+solution for CyberSecurity applications. It provides a framework to ingest,
+process and also store data such as application logs, network logs and so on so
+that can be analyzed by Information security teams so that they can detect
+anomalies and respond to cyber threats. It provides the storage solution in the
+form of security data lake or vault where the logs can be stored long term on
+cost effective storage. In addition to SIEM or Security information and event
+management features Metron also provides packet replay utilities which can be of
+immense help for the security analysts.  Metron also support applying machine
+learning algorithms on real time data that is being ingested through continuous
+streams~\cite{hid-sp18-517-metron-apache}.  Apache Metron caters to personnels
+at all levels in the CyberSecurity operations from CISO to SOC analyst to
+security Data Scientist~\cite{hid-sp18-517-metron-hortonworks}.  It provides a
+single view of the risk to CISO or Chief Information Security Officer while
+automatically performs that analytics so security investigator does not have to
+spend time on finding co-relation in the data. Metron also has the capability to
+create incidents and can integrate with the ITSM or Information technology
+service management systems to provide
 traceability~\cite{hid-sp18-517-metron-hortonworks}.
 
 
@@ -6223,12 +6210,12 @@ ERROR: index is missing
 
  
 
-Wordcount: 190
+Wordcount: 193
 
 
 Quote ratio: 0.00 \%
  
-Max Line length: 70
+Max Line length: 80
 \end{IU}
 
 \section{MongoDB}
@@ -6268,28 +6255,25 @@ Max Line length: 67
 
 \section{Pulsar}
 
-Apache Pulsar which is also an open source project of the Apache
-foundation was originally developed by Yahoo. It is a messaging
-solution that enables high performance server to server messaging.
-Similar to Kafka Pulsar is based on publisher-subscriber model.  Some
-of the key features of Pulsar include low latency in publishing,
-guaranteed message delivery, scalability and so on.  The
-publish-subscribe pattern involves components such as producers,
-consumers, topics and subscription wherein; topics are channels that
-transmit data from source to target or in other words from producers
-to consumers, producers job is to publish a message and a consumer
-process is the one that receives the message.  Subscriptions are set
-of rules that determine how messages flow in the system from producers
-to consumers and have three modes namely exclusive, failover and
-shared~\cite{hid-sp18-517-pulsar-apache}.  Pulsar can be installed and
-run in standalone mode or standalone cluster, it can also be run
-multiple clusters. Pulsar installation involves installing an instance
-which can be installed across clusters when installed in multi-cluster
-environment. In this setup clusters can be running within the data
-center or can span across multiple data centers.  Pulsar also support
-geo-replication so the clusters can replicate with each other. Pulsar
-can also be installed on Kubernetes on Google Kubernetes or
-AWS~\cite{hid-sp18-517-pulsar-apache}.
+Apache Pulsar which is also an open source project of the Apache foundation was
+originally developed by Yahoo. It is a messaging solution that enables high
+performance server to server messaging.  Similar to Kafka Pulsar is based on
+publisher-subscriber model.  Some of the key features of Pulsar include low
+latency in publishing, guaranteed message delivery, scalability and so on.  The
+publish-subscribe pattern involves components such as producers, consumers,
+topics and subscription wherein; topics are channels that transmit data from
+source to target or in other words from producers to consumers, producers job is
+to publish a message and a consumer process is the one that receives the
+message.  Subscriptions are set of rules that determine how messages flow in the
+system from producers to consumers and have three modes namely exclusive,
+failover and shared~\cite{hid-sp18-517-pulsar-apache}.  Pulsar can be installed
+and run in standalone mode or standalone cluster, it can also be run multiple
+clusters. Pulsar installation involves installing an instance which can be
+installed across clusters when installed in multi-cluster environment. In this
+setup clusters can be running within the data center or can span across multiple
+data centers.  Pulsar also support geo-replication so the clusters can replicate
+with each other. Pulsar can also be installed on Kubernetes on Google Kubernetes
+or AWS~\cite{hid-sp18-517-pulsar-apache}.
 
 
 \begin{IU}
@@ -6302,45 +6286,42 @@ ERROR: index is missing
 
  
 
-Wordcount: 196
+Wordcount: 200
 
 
 Quote ratio: 0.00 \%
  
-Max Line length: 70
+Max Line length: 80
 \end{IU}
 
 \section{Sqoop}
 
-The primary application of Sqoop is data transfer between the
-traditional or relational database management systems and Hadoop
-platforms. It also has the capability to transfer data from mainframes
-to Hadoop. Sqoop works with Oracle, MySQL and can import data from
-these sources into the Hadoop distributed File systems or HDFS. In
-addition it can also transform data in map-reduce or even export it to
-the database such as Oracle.  Sqoop works in batch mode and cannot
-move data real time.  ~\cite{hid-sp18-517-Sqoop}. Sqoop relies on the
-database to describe the schema of the data being imported. It uses
-MapReduce to import and export the data, which provides parallel
-operation as well as fault tolerance.  For databases, Sqoop reads the
-table row-by-row into HDFS.  For mainframe datasets, Sqoop reads
-records from each mainframe dataset into HDFS. The output of this
-import process is a set of files containing a copy of the imported
-table or datasets. Since the import process runs in parallel processes
-each process creates a file causing multiple files being
-created. These text files can use different delimiters such as comma,
-pipe and so on ~\cite{hid-sp18-517-Sqoop}. Sqoop relies on the
-database to describe the schema of the data being imported. It uses
-MapReduce to import and export the data, which provides parallel
-operation as well as fault tolerance.  For databases, Sqoop reads the
-table row-by-row into HDFS.  For mainframe datasets, Sqoop reads
-records from each mainframe dataset into HDFS. The output of this
-import process is a set of files containing a copy of the imported
-table or datasets. Since the import process runs in parallel processes
-each process creates a file causing multiple files being
-created. These text files can use different delimiters such as comma,
-pipe and so on~\cite{hid-sp18-517-Sqoop}.
+The primary application of Sqoop is data transfer between the traditional or
+relational database management systems and Hadoop platforms. It also has the
+capability to transfer data from mainframes to Hadoop. Sqoop works with Oracle,
+MySQL and can import data from these sources into the Hadoop distributed File
+systems or HDFS. In addition it can also transform data in map-reduce or even
+export it to the database such as Oracle.  Sqoop works in batch mode and cannot
+move data real time.  ~\cite{hid-sp18-517-Sqoop}. Sqoop relies on the database
+to describe the schema of the data being imported. It uses MapReduce to import
+and export the data, which provides parallel operation as well as fault
+tolerance.  For databases, Sqoop reads the table row-by-row into HDFS.  For
+mainframe datasets, Sqoop reads records from each mainframe dataset into
+HDFS. The output of this import process is a set of files containing a copy of
+the imported table or datasets. Since the import process runs in parallel
+processes each process creates a file causing multiple files being
+created. These text files can use different delimiters such as comma, pipe and
+so on ~\cite{hid-sp18-517-Sqoop}. Sqoop relies on the database to describe the
+schema of the data being imported. It uses MapReduce to import and export the
+data, which provides parallel operation as well as fault tolerance.  For
+databases, Sqoop reads the table row-by-row into HDFS.  For mainframe datasets,
+Sqoop reads records from each mainframe dataset into HDFS. The output of this
+import process is a set of files containing a copy of the imported table or
+datasets. Since the import process runs in parallel processes each process
+creates a file causing multiple files being created. These text files can use
+different delimiters such as comma, pipe and so on~\cite{hid-sp18-517-Sqoop}.
 \footnote{citation wrongly placed}
+
 
 \begin{IU}
 
@@ -6356,20 +6337,21 @@ ERROR: entry contains a footnote that has not yet been addressed
 chktex:
 \begin{tiny}
 \begin{verbatim}
-Warning 39 in ../hid-sp18-517/technology/abstract-sqoop.tex line 10: Double
-space found. move data real time.  ~\cite{hid-sp18-517-Sqoop}. Sqoop relies on
-the                        ^ Warning 39 in ../hid-sp18-517/technology/abstract-
-sqoop.tex line 20: Double space found. pipe and so on ~\cite{hid-
-sp18-517-Sqoop}. Sqoop relies on the                 ^
+Warning 39 in ../hid-sp18-517/technology/abstract-sqoop.tex line 9: Double space
+found. move data real time.  ~\cite{hid-sp18-517-Sqoop}. Sqoop relies on the
+database                        ^ Warning 39 in ../hid-
+sp18-517/technology/abstract-sqoop.tex line 18: Double space found. so on
+~\cite{hid-sp18-517-Sqoop}. Sqoop relies on the database to describe the
+^
 \end{verbatim}
 \end{tiny}
 
-Wordcount: 274
+Wordcount: 278
 
 
 Quote ratio: 0.00 \%
  
-Max Line length: 70
+Max Line length: 79
 \end{IU}
 
 \section{AWS API Gateway}
@@ -7565,14 +7547,22 @@ Max Line length: 72
 \index{Apache Accumulo}
 \index{HDFS}
 
-Based on Google's BigTable design, Apache has their own
-data store called Accumulo~\cite{hid-sp18-526-www-apache-accumulo}.
-Accumulo overlays the Hadoop Distributed File System (HDFS) and
-Apache Zookeeper. Originally created by the US National Security
-Agency, Accumulo has a large focus on security and access control. 
-Every key/value pair in Accumulo has its own user restrictions. 
-Accumulo is used mostly in other open-source projects and in other 
-Apache projects such as Fluo, Gora, Hive, Pig, and Rya.
+Based on Google's BigTable design, Apache has their own data store called
+Accumulo\cite{hid-sp18-526-www-apache-accumulo}. Accumulo overlays the
+Hadoop Distributed File System (HDFS) and Apache Zookeeper. Originally
+created by the US National Security Agency, Accumulo has a large focus on
+security and access control. Every key-value pair in Accumulo has its own
+user restrictions. Accumulo is used mostly in other open source projects
+and in other Apache projects such as Fluo, Gora, Hive, Pig, and Rya.
+
+Accumulo is a distributed storage system for data, which is simpler than a
+typical key-value pair system. Each record in Accumulo has the following
+properties: \color{blue}``\emph{Key}''\color{black}, \color{blue}``\emph{Value}''\color{black}, \color{blue}``\emph{Row ID}''\color{black}, \color{blue}``\emph{Column}''\color{black}, \color{blue}``\emph{Timestamp}''\color{black},
+\color{blue}``\emph{Family}''\color{black}, \color{blue}``\emph{Qualifier}''\color{black}, and \color{blue}``\emph{Visibility}''\color{black}. The records are stored across
+many machines, with Accumolo keeping track of the properties. A monitor is
+also provided for information on the current states of the system. A garbage
+collector, tablet server (table partition manager), and tracer (for timing)
+are also included as well as iterators for data management.
 
 
 
@@ -7584,58 +7574,35 @@ hid-sp18-526
 
  
 
-Wordcount: 71
-
-ERROR: This abstract is too short.
+Wordcount: 147
 
 
-Quote ratio: 0.00 \%
+Quote ratio: 11.19 \%
  
-Max Line length: 67
-\end{IU}
-
-\section{Apache Falcon}
-\index{Apache Falcon}
-
-Apache Falcon~\cite{hid-sp18-www-526-apache-falcon} is
-a Hadoop-based data management system for creating
-workflow pipelines. The workflows are generated in Apache
-Oozie. Falcon establishes feeds between data and processing
-resources within Hadoop. The feeds are fully manageable.
-
-
-\begin{IU}
-
-hid-sp18-526
-
-\href{https://github.com/cloudmesh-community/hid-sp18-526/blob/master//technology/abstract-apache-falcon.tex}{abstract-apache-falcon.tex}
-
- 
-
-Wordcount: 32
-
-ERROR: This abstract is too short.
-
-
-Quote ratio: 0.00 \%
- 
-Max Line length: 59
+Max Line length: 230
 \end{IU}
 
 \section{Apache Phoenix}
 \index{Apache Phoenix}
 \index{OLTP}
 
-Apache Phoenix~\cite{hid-sp18-www-526-apache-phoenix} 
-is an open-source database engine by Apache that works 
-in tandem with Hadoop and HBase. The system supports online 
-transaction processing (OLTP). Using SQL and Java database 
-connectivity (JDBC), Phoenix allows for queries over millions of rows 
-to be executed in milliseconds. Phoenix overlays HBase and allows 
-data to be accessed directly via SQL queries (through JDBC). It allows
-for indexing and parallelization to greatly reduce query time. Phoenix
-is compatible with the host of Hadoop products such as Spark, Hive, 
-and MapReduce.
+Apache Phoenix\cite{hid-sp18-526-www-apache-phoenix} is an open-source
+database engine by Apache that works in tandem with Hadoop and HBase. Because
+it uses HBase, Phoenix is a noSQL store. The system supports online
+transaction processing (OLTP). Using SQL and Java database connectivity
+(JDBC), Phoenix allows for queries over millions of rows to be executed in
+milliseconds. Phoenix overlays HBase and allows data to be accessed directly
+via SQL queries (through JDBC). It allows for indexing and parallelization
+to greatly reduce query time. Phoenix is compatible with the host of Hadoop
+products such as Spark, Hive, and MapReduce. Phoenix allows table modifications
+through DDL (Data Definition Language) commands. These commands use simple
+SQL statements to create or alter tables. Phoenix also uses ACID (Atomicity,
+Consistency, Isolation, Durability) transactions.
+
+In order to begin using Phoenix, you must first install java and download
+the Phoenix jar file. Phoenix is currently used by many large corporations
+such as eBay, Salesforce, and Bloomberg.
+
 
 
 \begin{IU}
@@ -7646,26 +7613,32 @@ hid-sp18-526
 
  
 
-Wordcount: 85
-
-ERROR: This abstract is too short.
+Wordcount: 143
 
 
 Quote ratio: 0.00 \%
  
-Max Line length: 70
+Max Line length: 79
 \end{IU}
 
-\section{Apache River}
-\index{Apache River}
-\index{Jini}
+\section{Fluentd}
+\index{Fluentd}
 
-Apache River,~\cite{hid-sp18-www-526-apache-river} formerly
-Jini, is a service-oriented architecture for distributed
-systems. It uses Jini Extensible Remote Invocations (JERI)
-to communicate between client and service. The primary 
-purpose of River is to build large-scale, flexible networks
-for distributed computing.
+Fluentd is a data collector used by many organizations such as Amazon,
+Microsoft, and Google\cite{hid-sp18-526-www-fluentd}. It is open source
+and available on GitHub. Fluentd creates a layer of abstraction between the
+source of the data and backend, known as the \color{blue}``\emph{Unified Logging Layer}''\color{black}. This
+centralized system of data collection ensures security and reliability. Logs
+contain important information, but due to modern data sizes, they are no
+longer for just human use. The purpose of the logging layer is to allow more
+machine reading of logs as opposed to human reading.
+
+In the logging layer, data is converted to json, then sent to the
+backend. Fluentd has a plugin system for many different programs,
+such as Python and Node.js. There are also custom versions of Fluentd in
+production. Google, for example, uses their own version of fluentd as their
+logging layer in conjuction with Google BigQuery. The Fluentd project also
+includes \color{blue}``\emph{Fluent Bit}''\color{black} which is a data forwarding system.
 
 
 
@@ -7673,32 +7646,37 @@ for distributed computing.
 
 hid-sp18-526
 
-\href{https://github.com/cloudmesh-community/hid-sp18-526/blob/master//technology/abstract-apache-river.tex}{abstract-apache-river.tex}
+\href{https://github.com/cloudmesh-community/hid-sp18-526/blob/master//technology/abstract-fluentd.tex}{abstract-fluentd.tex}
 
  
 
-Wordcount: 36
-
-ERROR: This abstract is too short.
+Wordcount: 145
 
 
-Quote ratio: 0.00 \%
+Quote ratio: 5.22 \%
  
-Max Line length: 59
+Max Line length: 108
 \end{IU}
 
 \section{Synthea}
 \index{Synthea}
 
-Synthea~\cite{hid-sp18-526-www-synthea} is an open-source
-medical patient generator. Synthea allows for the full synthetic
-generation of medical patients via patient records, which solves
-the privacy problems of using real-world patient data.
+Synthea~\cite{hid-sp18-526-www-synthea} is an open-source medical patient
+generator. Synthea allows for the full synthetic generation of medical patients
+and patient records, which solves the privacy problems of using real-world
+patient data. It also allows medical researchers to generate data on-demand
+and test scaling, stress, etc. Synthea uses a Generic Model Framework (GMF) to
+model and track disease progression as well. Each patient generated by Synthea
+is a full-model: from birth to present with full demographics. This type of
+data can be used for small and large-scale health analysis. The data underlying
+these models are generated based on current academic research. Therefore,
+the data can also be used to run analysis on the synthetic patients.
 
-Each patient generated by Synthea is a full-model: from birth
-to present with full demographics. This type of data can be used
-for small and large-scale health analysis. The data underlying
-these models are generated based on current academic research.
+According to its website, Synthea is useful for \color{blue}``\emph{Academic Research}''\color{black}, the
+\color{blue}``\emph{Health IT Industry}''\color{black}, and \color{blue}``\emph{Policy Formation}''\color{black}. Synthea is a product
+of MITRE Corporation written in Java, and supports both C-CDA and FHIR
+formats. It can also generate graphs using Graphviz.
+
 
 
 \begin{IU}
@@ -7709,14 +7687,49 @@ hid-sp18-526
 
  
 
-Wordcount: 63
+Wordcount: 141
 
-ERROR: This abstract is too short.
+
+Quote ratio: 7.73 \%
+ 
+Max Line length: 134
+\end{IU}
+
+\section{Synthetic Data Vault}
+\index{Synthetic Data Vault}
+
+The most notable synthetic data generator is the Synthetic Data Vault
+(SDV)\cite{hid-sp18-526-patki-sdv}. Developed at MIT by Neha Patki, 
+Roy Wedge, and Kalyan Veeramachaneni, the Synthetic Data Vault uses 
+machine learning techniques to model database structure and content. 
+The models can then be used to generate entirely synthetic tables 
+and relationships which are true to the form of the originals. 
+Because the synthetic data is generated and modeled mathematically
+according to the original data, very little, if any, insight is lost. Here
+we will explore why we should use synthetic data, how SDV generates synthetic
+data, and how to use the data generated by SDV.
+
+SDV is written in Python and is, therefore, cross-platform. A separate file
+is required for each database in the table. Also, each database requires a
+configuration file in json format. The specifications for the configuration
+file will be shown later, but first we will discuss why such a product is
+necessary.
+
+
+\begin{IU}
+
+hid-sp18-526
+
+\href{https://github.com/cloudmesh-community/hid-sp18-526/blob/master//technology/abstract-synthetic-data-vault.tex}{abstract-synthetic-data-vault.tex}
+
+ 
+
+Wordcount: 150
 
 
 Quote ratio: 0.00 \%
  
-Max Line length: 64
+Max Line length: 77
 \end{IU}
 
 \section{Backblaze}
@@ -9282,11 +9295,11 @@ hid-sp18-526
 
 \href{https://github.com/cloudmesh-community/hid-sp18-526/blob/master//technology/abstract-apache-accumulo.tex}{abstract-apache-accumulo.tex}
 
-\href{https://github.com/cloudmesh-community/hid-sp18-526/blob/master//technology/abstract-apache-river.tex}{abstract-apache-river.tex}
+\href{https://github.com/cloudmesh-community/hid-sp18-526/blob/master//technology/abstract-fluentd.tex}{abstract-fluentd.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-526/blob/master//technology/abstract-synthetic-data-vault.tex}{abstract-synthetic-data-vault.tex}
 
 \href{https://github.com/cloudmesh-community/hid-sp18-526/blob/master//technology/abstract-apache-phoenix.tex}{abstract-apache-phoenix.tex}
-
-\href{https://github.com/cloudmesh-community/hid-sp18-526/blob/master//technology/abstract-apache-falcon.tex}{abstract-apache-falcon.tex}
 
 \href{https://github.com/cloudmesh-community/hid-sp18-526/blob/master//technology/hid-sp18-526.bib}{../hid-sp18-526/technology/hid-sp18-526.bib}
 
